Replace IOUtils, part1 #1098
PR #1100 feedback

Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/1098